# ark-asa-parser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICK_PUBLISH.md  README.md  SETUP.md  all_player_data.txt  all_server_player_data.txt  analyze_data_quality.py  analyze_inv.py  analyze_xp_pattern.py  ark_asa_xp_table.txt  ark_asa_xp_table_final.txt  build_xp_table.py  check_current_table.py  check_level_properties.py  comprehensive_player_data.txt  explore_world_save.py  extinction_screenshot_players.txt  extract_all_players.py  extract_amissa_players.py  extract_extinction_backup.py  extract_extinction_players.py  extract_island_players.py  extract_player_xp.py  extract_screenshot_players.py  final_curve_complete.py  final_xp_table.txt  find_boldphoenix.py  find_exact_curve.py  find_incremental.py  find_properties.py  find_with_offset.py  fit_exact_curve.py  fit_final_curve.py  fit_weighted_curve.py  generate_final_table.py  (+18 more)
.github/workflows/: publish.yml
ark_asa_parser/: __init__.py  async_reader.py  binary_reader.py  cluster_reader.py  dino_extractor.py  dino_structure.py  historical_tracker.py  inventory_reader.py  inventory_reader_v2.py  levels.py  performance.py  player_stats.py  save_reader.py  save_watcher.py  simple_property_reader.py  structure_extractor.py  xp_data.py
examples/: advanced_features.py  async_usage.py  basic_usage.py  cluster_transfers.py  performance_testing.py  player_stats_usage.py  read_individual_files.py  scan_cluster.py
tests/: __init__.py
