[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-asa-parser"
version = "0.1.1"
authors = [
    { name = "BoldPhoenix", email = "your.email@example.com" }
]
description = "Extract player, tribe, and server data from ARK: Survival Ascended save files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ark", "ark survival ascended", "asa", "save parser", "game data"]

[project.urls]
Homepage = "https://github.com/BoldPhoenix/ark-asa-parser"
Issues = "https://github.com/BoldPhoenix/ark-asa-parser/issues"
Repository = "https://github.com/BoldPhoenix/ark-asa-parser"

[tool.setuptools.packages.find]
where = ["."]
include = ["ark_asa_parser*"]
exclude = ["tests*", "examples*"]
